--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-pdf": "^5.7.2",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
